fixed bottom white space bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,6 @@
  html, body {
     width: 100%;
     height: 100%;
-    display: flex;
     margin: 0;
     padding: 0;
 }
@@ -212,6 +211,7 @@ main {
     width: 100%;
     min-height: 100%;
     padding-top: 40px;
+    padding-bottom: 70px;
     position: relative;
     display: block;
 }
